force-app/main/default/objects/Delivery_Agent__c/Delivery_Agent__c.object-meta.xml
<CustomObject>
    <label>Delivery_Agent</label>
    <nameField>
        <label>Delivery_Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery_Agents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>