force-app/main/default/objects/Delivery_Agent__c/fields/Active_Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Orders_Count__c</fullName>
    <label>Active_Orders_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>