force-app/main/default/objects/Delivery_Agent__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL_TIME</fullName>
            </value>
            <value>
                <fullName>PART_TIME</fullName>
            </value>
            <value>
                <fullName>CONTRACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>