force-app/main/default/objects/Delivery_Agent__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Available</label>
    <type>Checkbox</type>
</CustomField>