force-app/main/default/objects/Delivery_Agent__c/fields/Last_Ops_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Ops_Review_Date__c</fullName>
    <label>Last_Ops_Review_Date</label>
    <type>Date</type>
</CustomField>