force-app/main/default/objects/Delivery_Agent__c/fields/Last_Order_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Assigned_At__c</fullName>
    <label>Last_Order_Assigned_At</label>
    <type>DateTime</type>
</CustomField>