force-app/main/default/objects/Delivery_Agent__c/fields/Max_Active_Orders__c.field-meta.xml
<CustomField>
    <fullName>Max_Active_Orders__c</fullName>
    <label>Max_Active_Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>