force-app/main/default/objects/Delivery_Agent__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>OFFLINE</fullName>
            </value>
            <value>
                <fullName>ON_BREAK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>