force-app/main/default/objects/Delivery_Agent__c/fields/Service_Zone__c.field-meta.xml
<CustomField>
    <fullName>Service_Zone__c</fullName>
    <label>Service_Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Current_City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T. Nagar</fullName>
            </value>
            <value>
                <fullName>Anna Nagar</fullName>
            </value>
            <value>
                <fullName>Adyar</fullName>
            </value>
            <value>
                <fullName>Velachery</fullName>
            </value>
            <value>
                <fullName>Tambaram</fullName>
            </value>
            <value>
                <fullName>Porur</fullName>
            </value>
            <value>
                <fullName>Ambattur</fullName>
            </value>
            <value>
                <fullName>Mylapore</fullName>
            </value>
            <value>
                <fullName>Chromepet</fullName>
            </value>
            <value>
                <fullName>Perambur</fullName>
            </value>
            <value>
                <fullName>RS Puram</fullName>
            </value>
            <value>
                <fullName>Gandhipuram</fullName>
            </value>
            <value>
                <fullName>Saibaba Colony</fullName>
            </value>
            <value>
                <fullName>Peelamedu</fullName>
            </value>
            <value>
                <fullName>Singanallur</fullName>
            </value>
            <value>
                <fullName>Saravanampatti</fullName>
            </value>
            <value>
                <fullName>Ukkadam</fullName>
            </value>
            <value>
                <fullName>Ramanathapuram</fullName>
            </value>
            <value>
                <fullName>Town Hall</fullName>
            </value>
            <value>
                <fullName>Kovaipudur</fullName>
            </value>
            <value>
                <fullName>Thillai Nagar</fullName>
            </value>
            <value>
                <fullName>Cantonment</fullName>
            </value>
            <value>
                <fullName>Srirangam</fullName>
            </value>
            <value>
                <fullName>Woraiyur</fullName>
            </value>
            <value>
                <fullName>K.K. Nagar</fullName>
            </value>
            <value>
                <fullName>Tennur</fullName>
            </value>
            <value>
                <fullName>Karumandapam</fullName>
            </value>
            <value>
                <fullName>Golden Rock</fullName>
            </value>
            <value>
                <fullName>Kattur</fullName>
            </value>
            <value>
                <fullName>Chatram Bus Stand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>