force-app/main/default/objects/Delivery_Agent__c/validationRules/Active_agent_must_have_a_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_agent_must_have_a_City</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Is_Active__c = TRUE,
ISPICKVAL( Current_City__c , &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Is_Active__c</errorDisplayField>
    <errorMessage>Active agents must have a current city assigned.</errorMessage>
</ValidationRule>