force-app/main/default/objects/Delivery_Agent__c/validationRules/Inactive_agent_cannot_be_available.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_agent_cannot_be_available</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Is_Available__c = TRUE,
  Is_Active__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Is_Available__c</errorDisplayField>
    <errorMessage>Inactive agents cannot be marked as available.</errorMessage>
</ValidationRule>